<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminderCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:contentPadding="8dp">

    <LinearLayout
        android:id="@+id/reminderCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editReminderTimeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editReminderTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editAmountLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/dosage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_advanced_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_settings"
            app:icon="@drawable/gear" />

        <TextView
            android:id="@+id/advancedSettingsSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>