...
    <string name="cycle_reminder">Cyclic reminder</string>
    <string name="cycle_start_date">First cycle start</string>
    <string name="daily_from_to">Daily interval from %1$s to %2$s</string>
    <string name="day_of_month_limited">Limited to some days of the month</string>
    <string name="every_day">Every day</string>
    <string name="help">Help</string>
    <string name="every_interval">Every %s</string>
    <string name="expiration_date">Expiration date</string>
    <string name="expiration_date_reminder_help">Reminds when the medicine\'s expiration date is reached or a configurable time before that date.</string>
    <string name="inactive">Inactive</string>
    <string name="interval_time">Interval %s</string>
    <string name="linked_reminder">Linked reminder</string>
    <string name="linked_reminder_help">A linked reminder is a follow-up reminder that is scheduled a certain amount of time after a primary reminder is raised. This is useful for medications that need to be taken in sequence, with a specific delay between them.</string>
    <string name="linked_reminder_summary">After reminder at %1$s</string>
    <string name="medicine_stock_string">%1$s left</string>
    <string name="out_of_stock_reminder">Out of stock reminder</string>
    <string name="out_of_stock_reminder_help">Reminds when the medicine is out of stock, either after every reminder or once or once per day.</string>
    <string name="production_date">Production date</string>
    <string name="refill">Stock refill</string>
    <string name="skipped">Skipped</string>
...
    <string name="minutes_1">1 minute</string>
    <string name="number_of_repetitions">Number of repetitions</string>
    <string name="time_between_repetitions">Time between repetitions</string>
    <string name="repeat_reminders_summary">Automatically repeats a reminder until it is marked taken or skipped</string>
    <string name="add_linked_reminder">Add reminder for following dose</string>
    <string name="linked_reminder_delay">Delay for following dose</string>
    <string name="delay">Delay</string>
    <string name="delete_re_raise_event">Do you want to delete this event and re-raise the notification?</string>
    <string name="interval_based_reminder">Interval based reminder</string>
    <string name="minutes_string">Minutes</string>
    <string name="hours_string">Hours</string>
    <string name="days_string">Days</string>
    <string name="weeks_string">Weeks</string>
...
