...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/interval">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editIntervalTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberSigned" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/intervalUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedButton="@id/intervalHours"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/intervalMinutes"
            style="?attr/materialButtonOutlinedStyle"
...
