...
<resources>
    <string name="tab_settings">Settings</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_medicine">Medicine</string>
    <string name="add_medicine">Add medicine</string>
    <string name="add_reminder">Add reminder</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="dosage">Dosage</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_delete_medicine">Are you sure to delete the medicine?</string>
    <string name="no_reminders">No reminders set</string>
    <string name="version">Version %s</string>
    <string name="are_you_sure_delete_reminder">Are you sure to delete the reminder?</string>
...
