...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/select_color" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reminderList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
...
